🎨 style.css - Add spacing overrides for things I couldn't fix with theme.json: postmeta top margin and h1 width

--- a/style.css
+++ b/style.css
@@ -16,7 +16,18 @@ Tags:
 */
 
 @media (max-width: 1000px) {
-    .wp-block-post-template-is-layout-grid {
-        grid-template-columns: 1fr; /* This will stack the columns into a single column below 500px */
-    }
+	.wp-block-post-template-is-layout-grid {
+		grid-template-columns: 1fr;
+	}
+}
+
+/* Terms and dates in post promo blocks had huge spacing matching blockGap and I couldn't find a way to remove the gap only inside of the post-template, so here we just reduce it to something reasonable. */
+:root :where(.is-layout-constrained)>.wp-block-post-date,
+:root :where(.is-layout-constrained)>.wp-block-post-terms {
+	margin-block-start: .4rem;
+}
+
+/* Can't find a way to make them all use .alignwide without modifying a ton of templates, these are the headings before lists of posts.  */
+h1.wp-block-query-title {
+	max-width: var(--wp--style--global--wide-size);
 }
